Update base headers to C++20 and sync with Chromium (see #3611)
Build configuration:
- Update to C++20 standard across all platforms
- Minimum supported compiler versions for C++20 are:
    - Visual Studio 2019 16.9.3 [unchanged]
    - GCC 10 (Ubuntu 20)
    - Clang 16 (Xcode 16.0)

Base headers synchronized with Chromium:
- Foundation: cef_immediate_crash.h, cef_always_false.h
- Compiler utilities: cef_compiler_specific.h
- Threading primitives: comments/minor fixes only
- Memory management: cef_scoped_refptr.h, cef_ref_counted.h
- WeakPtr: cef_weak_ptr.h
- Callback/Bind system: atomic update of all callback headers

New files:
- cef_is_complete.h, cef_is_instantiation.h, cef_to_address.h
- cef_always_false.h, cef_callback_tags.h

Removed unused standalone headers:
- cef_tuple.h, cef_auto_reset.h, cef_callback_list.h
- cef_cancelable_callback.h, cef_scoped_typeref_mac.h
- cef_scoped_block_mac.h, cef_scoped_policy.h

Unit tests (177 tests + 1 Windows-only):
- Ported base header tests from Chromium to ceftests/base/
- Added gmock support with fused sources
- Added test_bind.h for BindLambdaForTesting()

Documentation:
- Added CLAUDE_BASE_SYNC_INSTRUCTIONS.md for future syncs

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2336,6 +2336,7 @@ if (is_mac) {
     helper_deps = [
       ":libcef_dll_wrapper",
       ":gtest_teamcity",
+      "//testing/gmock",
       "//testing/gtest",
     ]
     helper_frameworks = [
@@ -2362,6 +2363,7 @@ if (is_mac) {
       ":ceftests_resources_bundle_data_english",
       ":ceftests_xibs",
       ":gtest_teamcity",
+      "//testing/gmock",
       "//testing/gtest",
     ]
     frameworks = [
@@ -2837,6 +2839,7 @@ if (is_mac) {
       ":libcef",
       ":libcef_dll_wrapper",
       ":gtest_teamcity",
+      "//testing/gmock",
       "//testing/gtest",
     ]
 
@@ -2916,6 +2919,7 @@ if (is_mac) {
         ":libcef",
         ":libcef_dll_wrapper",
         ":gtest_teamcity",
+        "//testing/gmock",
         "//testing/gtest",
       ]
 
