Add configurable initial window position for Document Picture-in-Picture
Usage:
  documentPictureInPicture.requestWindow({
    width: 400,
    height: 300,
    cefOptions: { position: { x: 100, y: 200 } }
  });

The feature is gated by Blink RuntimeEnabled flag and must be
explicitly enabled with:
  --enable-blink-features=DocumentPictureInPictureCefOptions


Approved-by: Marshall Greenblatt

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -72,6 +72,10 @@ patches = [
     #
     # Add configuration to bypass user activation requirement when opening
     # Document picture-in-picture windows.
+    #
+    # Add support for specifying initial window position via
+    # documentPictureInPicture.requestWindow({ cefOptions: { position: {x, y} } }).
+    # Enable with --enable-blink-features=DocumentPictureInPictureCefOptions.
     'name': 'webkit_move_pip',
   },
   {
