Fix Picture-in-Picture window icon in Windows taskbar
Update Browser::GetCurrentPageIcon() to use the favicon from the opener
WebContents for document picture-in-picture windows, instead of the PiP
window's own WebContents. This ensures the correct icon is displayed in
the Windows taskbar preview and matches the existing behavior for
window titles, where PiP windows use the opener's title.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -257,6 +257,9 @@ patches = [
     # Avoid duplicate window from DevTools when CEF handles the open via
     # OnOpenURLFromTab.
     # https://github.com/chromiumembedded/cef/issues/3735
+    #
+    # Fix Picture-in-Picture window icon in Windows taskbar by using the
+    # favicon from the opener WebContents.
     'name': 'chrome_browser_browser',
   },
   {
