Add gmock support and generate fused gtest/gmock files dynamically (see #3611)
- Add gmock support for CEF tests, matching the existing gtest pattern
- Add fuse_gtest_files.py and fuse_gmock_files.py scripts (recovered from
  googletest commit 58937787) for generating fused single-file versions
- Update make_distrib.py to generate fused gtest/gmock files at distribution
  time instead of checking them into the repository
- Add tests/gmock/ with proxy header and CMakeLists.txt.in
- Add tools/distrib/bazel/tests-gmock-BUILD.bazel for Bazel builds
- Remove pre-generated fused files from tools/distrib/gtest/ (now generated
  dynamically from third_party/googletest/src/)

This reduces repo size and ensures fused files always match the Chromium
version being built.

--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -224,6 +224,7 @@ add_subdirectory(${CEF_LIBCEF_DLL_WRAPPER_PATH} libcef_dll_wrapper)
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests")
   add_subdirectory(tests/cefsimple)
   add_subdirectory(tests/cefsimple_capi)
+  add_subdirectory(tests/gmock)
   add_subdirectory(tests/gtest)
   add_subdirectory(tests/ceftests)
 endif()
