--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -73,8 +73,9 @@ patches = [
     # Add configuration to bypass user activation requirement when opening
     # Document picture-in-picture windows.
     #
-    # Add support for specifying initial window position via
-    # documentPictureInPicture.requestWindow({ cefOptions: { position: {x, y} } }).
+    # Add support for cefOptions (position, resizable) via
+    # documentPictureInPicture.requestWindow({ cefOptions: { ... } }).
+    #
     # Enable with --enable-blink-features=DocumentPictureInPictureCefOptions.
     'name': 'webkit_move_pip',
   },
@@ -244,6 +245,8 @@ patches = [
     # See related documentation in
     # libcef/browser/chrome/views/chrome_browser_frame.h.
     # https://github.com/chromiumembedded/cef/issues/2969
+    #
+    # Support PiP window resizable option from DocumentPictureInPictureCefOptions.
     'name': 'chrome_runtime_views',
   },
   {
@@ -260,6 +263,8 @@ patches = [
     #
     # Fix Picture-in-Picture window icon in Windows taskbar by using the
     # favicon from the opener WebContents.
+    #
+    # Support PiP window resizable option from DocumentPictureInPictureCefOptions.
     'name': 'chrome_browser_browser',
   },
   {
