Fix issues with always-enabled SideBySide feature (see #3980)
When BrowserViewLayoutImpl::Layout is called before the frame view
has been laid out, GetBrowserLayoutParams returns empty params.
The early return allowed View::Layout's for-loop to trigger child
layouts with 0x0 bounds, causing ContentsLayoutManager to receive
invalid size. Fall back to using the host's local bounds as
visual_client_area when frame params are empty, allowing layout to
proceed with valid bounds.

Call UpdateDialogTopInsetInBrowserView in GetDialogTop() to match
the behavior of BrowserViewLayoutImplOld::GetDialogTopY(), allowing
CEF to adjust dialog positioning.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -247,6 +247,9 @@ patches = [
     # https://github.com/chromiumembedded/cef/issues/2969
     #
     # Support PiP window resizable option from DocumentPictureInPictureCefOptions.
+    #
+    # Fix 0x0 layout during early browser initialization due to
+    # GetBrowserLayoutParams returning empty params in BrowserViewLayoutImpl::Layout.
     'name': 'chrome_runtime_views',
   },
   {
