Fix dangling pointer crashes
During browser window closing, the ToolbarView is destroyed before
BrowserView, causing views in the toolbar to be freed while
WebUIBubbleManagerImpl and TabSearchBubbleHost still hold raw_ptr
references to them. When BrowserView is later destroyed, these
classes trigger dangling pointer errors.

Replace raw_ptr with views::ViewTracker in both classes:
- WebUIBubbleManagerImpl::anchor_view_ -> anchor_view_tracker_
- TabSearchBubbleHost::button_ -> button_tracker_

ViewTracker safely clears its internal pointer when the tracked
view is destroyed, preventing the dangling pointer situation.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -817,5 +817,14 @@ patches = [
   {
     # win: Fix nullptr crash in AXPlatformNodeWin::accLocation().
     'name': 'win_ax_platform_node'
+  },
+  {
+    # Fix dangling pointer crashes in WebUIBubbleManagerImpl and
+    # TabSearchBubbleHost. During browser window closing, the ToolbarView is
+    # destroyed before BrowserView, causing views in the toolbar to be freed
+    # while WebUIBubbleManagerImpl and TabSearchBubbleHost still hold raw_ptr
+    # references to them. Switch from raw_ptr to ViewTracker usage which
+    # safely clears its internal pointer when the tracked view is destroyed.
+    'name': 'chrome_browser_views_dangling_rawptr'
   }
 ]
