--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -826,5 +826,12 @@ patches = [
     # references to them. Switch from raw_ptr to ViewTracker usage which
     # safely clears its internal pointer when the tracked view is destroyed.
     'name': 'chrome_browser_views_dangling_rawptr'
+  },
+  {
+    # Disable TPM metrics collection on Windows/Mac. This can crash on some
+    # Windows machines with buggy TPM drivers (null pointer dereference in
+    # PCPKsp.dll when calling NCryptIsAlgSupported).
+    # https://issues.chromium.org/issues/476896967
+    'name': 'chrome_browser_metrics_tpm_476896967'
   }
 ]
