win: Disable TPM metrics collection to avoid crash
TPM metrics collection via MaybeMeasureTpmOperations() can crash on
some Windows machines due to a null pointer dereference in the Windows
TPM Platform Crypto Provider (PCPKsp.dll) when calling
NCryptIsAlgSupported().

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -820,5 +820,12 @@ patches = [
     # Cherry-pick of https://crrev.com/16a8078b66.
     # https://issues.chromium.org/issues/450464276
     'name': 'net_connection_drp_450464276'
+  },
+  {
+    # Disable TPM metrics collection on Windows/Mac. This can crash on some
+    # Windows machines with buggy TPM drivers (null pointer dereference in
+    # PCPKsp.dll when calling NCryptIsAlgSupported).
+    # https://issues.chromium.org/issues/476896967
+    'name': 'chrome_browser_metrics_tpm_476896967'
   }
 ]
