alloy: Fix autofill crash during credit card payment (fixes #4075)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -795,6 +795,9 @@ patches = [
   {
     # alloy: Fix autofill crash after form submission.
     # https://github.com/chromiumembedded/cef/issues/3796
+    #
+    # alloy: Fix autofill crash during credit card payment.
+    # https://github.com/chromiumembedded/cef/issues/4075
     'name': 'chrome_autofill_bubble_3796'
   },
   {
