win: Fix crash opening multiple file dialogs (fixes #4063)
This change disables the AutoCloseFileDialogs feature by default.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -288,6 +288,10 @@ patches = [
     # - Adds additional type filters for dialogs created via FileSelectHelper.
     # - Adds support for chaining PrintingContextLinux callbacks.
     # https://github.com/chromiumembedded/cef/issues/3314
+    #
+    # Disable the AutoCloseFileDialogs feature by default to avoid a crash
+    # when opening a file dialog simultaneously from multiple windows.
+    # https://github.com/chromiumembedded/cef/issues/4063
     'name': 'chrome_browser_dialogs_native',
   },
   {
