Disable GCM to avoid DEPRECATED_ENDPOINT errors (fixes #4078)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -840,5 +840,10 @@ patches = [
     # PCPKsp.dll when calling NCryptIsAlgSupported).
     # https://issues.chromium.org/issues/476896967
     'name': 'chrome_browser_metrics_tpm_476896967'
+  },
+  {
+    # Disable GCM to avoid DEPRECATED_ENDPOINT errors.
+    # https://github.com/chromiumembedded/cef/issues/4078
+    'name': 'components_gcm_disable'
   }
 ]
