tools: Rename docs/ to cppdocs/ for Doxygen output (see #4085)
This frees up docs/ for wiki documentation migrated from Bitbucket.
The generated C++ API documentation now goes to cppdocs/ instead.

--- a/.gitignore.in
+++ b/.gitignore.in
@@ -49,7 +49,7 @@ Thumbs.db
 *.kdev4
 # CEF generated directories
 /binary_distrib
-/docs
+/cppdocs
 # CEF generated files
 .ccls-cache/
 /cef_api_untracked.json
