--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -845,5 +845,10 @@ patches = [
     # Disable GCM to avoid DEPRECATED_ENDPOINT errors.
     # https://github.com/chromiumembedded/cef/issues/4078
     'name': 'components_gcm_disable'
-  }
+  },
+  {
+    # Support CEF component updater API.
+    # https://github.com/chromiumembedded/cef/issues/4087
+    'name': 'component_updater_cef',
+  },
 ]
