Address code review feedback

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -849,6 +849,6 @@ patches = [
   {
     # Support CEF component updater API.
     # https://github.com/chromiumembedded/cef/issues/4087
-    'name': 'component_updater_cef',
-  },
+    'name': 'component_updater_cef'
+  }
 ]
