bootstrap: Add sandbox compatibility hash (fixes #4092)
Introduce a hash of Chromium sandbox interface files to detect
incompatibilities between bootstrap.exe and libcef.dll at runtime,
allowing the strict version check to be skipped when interfaces match.

Core implementation:
- Add sandbox_compat_hash.py to calculate SHA-256 of interface files
  (chrome_elf_main.h, sandbox.h, sandbox_types.h, sandbox.mojom)
- Update make_version_header.py to generate CEF_SANDBOX_COMPAT_HASH
- Add sandbox_compat_hash field to cef_version_info_t struct
- Add entry 3 to cef_api_hash() for retrieving the hash
- Compare hashes in cef_scoped_library_loader_win.cc during load

Version management:
- Include sandbox_compat in cef_api_versions.json and cef_api_untracked.json
- Compare sandbox_compat for untracked versions (NEXT, EXPERIMENTAL)
- Trigger version bumps when sandbox interface files change

Build automation:
- Update cefbuilds JSON builder to include sandbox_compat in version records
- Run version_manager.py -a after Chromium updates on release branches
  to auto-detect hash changes and add new API versions

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1584,8 +1584,21 @@ action("make_version_header") {
     "//chrome/VERSION",
   ]
   outputs = [ "$root_gen_dir/cef/include/cef_version.h" ]
-
   args = rebase_path(outputs, root_build_dir)
+
+  if (is_win) {
+    # Sandbox interface files for Windows-only compatibility hash.
+    _sandbox_compat_files = [
+      "//chrome/chrome_elf/chrome_elf_main.h",
+      "//sandbox/policy/mojom/sandbox.mojom",
+      "//sandbox/win/src/sandbox.h",
+      "//sandbox/win/src/sandbox_types.h",
+    ]
+
+    inputs += _sandbox_compat_files
+    args += [ "--sandbox-files" ]
+    args += rebase_path(_sandbox_compat_files, root_build_dir)
+  }
 }
 
 # This no-op action lists args.gn as an output, allowing it to be referenced as
