Add CefComponentUpdater API (fixes #4087)
Exposes component update functionality in CEF, allowing clients to
trigger on-demand updates for registered components.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -850,5 +850,10 @@ patches = [
     # Fix missing profile.h include in system_menu_model_builder.cc.
     # https://chromium-review.googlesource.com/c/chromium/src/+/7582413
     'name': 'chrome_browser_system_menu'
+  },
+  {
+    # Support CEF component updater API.
+    # https://github.com/chromiumembedded/cef/issues/4087
+    'name': 'component_updater_4087'
   }
 ]
