distrib: Add cefsimple_capi/win/compatibility.manifest

--- a/tools/distrib/win/transfer_standard.cfg
+++ b/tools/distrib/win/transfer_standard.cfg
@@ -20,6 +20,10 @@
   },
   {
     'source' : '../build/win/compatibility.manifest',
+    'target' : 'tests/cefsimple_capi/win/compatibility.manifest',
+  },
+  {
+    'source' : '../build/win/compatibility.manifest',
     'target' : 'tests/ceftests/win/compatibility.manifest',
   },
 ]
